[metadata]
name = testable-demo-java
version = 1.1.0
description = Whitebox Java control flow metrics demo — validated and scored by Testable
long_description = file: README.md
long_description_content_type = text/markdown
author = PraveenTestable
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pytest>=8.0.0
    pytest-benchmark>=4.0.0

[options.extras_require]
dev =
    cosmic-ray>=8.0.0
    flake8>=6.0.0
    mypy>=1.0.0

[flake8]
max-line-length = 100
max-complexity = 12
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    build,
    dist
per-file-ignores =
    tests/*:E501

[mypy]
python_version = 3.9
strict = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_any_unimported = False
warn_return_any = True
warn_unused_configs = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short
markers =
    benchmark: performance benchmark tests
    integration: integration tests
    mutation: mutation testing related tests
